--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <i class="fab fa-github fa-2x"></i>
         </a>
       </div>
-      <a href="#" class="icon-arow">
+      <a href="#about" class="icon-arow">
         <i class="fas fa-chevron-down"></i>
       </a>
     </main>
@@ -82,39 +82,30 @@
     <!-- About me -->
 
     <main id="about">
-      <h1 class="lg-heading">
-        About
-        <span class="text-secondary">Me</span>
+      <h1 class="lg-heading-content">
+        About Me
       </h1>
-      <h2 class="sm-heading">
-        Let me tell you a few things...
-      </h2>
+      <div class="heading-underline"></div>
       <div class="about-info">
         <img src="img/portrait.jpg" alt="John Doe" class="bio-image" />
 
         <div class="bio">
-          <h3 class="text-secondary">BIO</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
-            magni nam nisi quae vitae? Quod molestiae ipsa autem natus eum vel
-            ducimus nulla harum voluptatem eligendi! Unde, reiciendis?
-            Praesentium, laborum.
+            Hi!, nice to meet you. I'm a Front-End Developer
           </p>
         </div>
 
         <div class="job job-1">
-          <h3>123 Webshop</h3>
-          <h6>Full Stack Developer</h6>
+          <img src="img/skills.png" alt="skills" width="80" />
+          <h3>Skills</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-            perferendis totam enim. Nesciunt porro dolores expedita dolor
-            necessitatibus deserunt nemo.
+            HTML5, CSS3, Javascript, React, Git, English: B1
           </p>
         </div>
 
         <div class="job job-2">
+          <img src="img/train.png" alt="train" width="80" />
           <h3>Designers ABC</h3>
-          <h6>Front End Developer</h6>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
             perferendis totam enim. Nesciunt porro dolores expedita dolor
@@ -123,8 +114,18 @@
         </div>
 
         <div class="job job-3">
+          <img src="img/game.png" alt="games" width="80" />
           <h3>Webworks</h3>
-          <h6>Graphic Designer</h6>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+            perferendis totam enim. Nesciunt porro dolores expedita dolor
+            necessitatibus deserunt nemo.
+          </p>
+        </div>
+
+        <div class="job job-4">
+          <img src="img/atom.png" alt="atom" width="80" />
+          <h3>Webworks</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
             perferendis totam enim. Nesciunt porro dolores expedita dolor
