--- a/index.html
+++ b/index.html
@@ -114,17 +114,7 @@
         </div>
 
         <div class="job job-3">
-          <img src="img/game.png" alt="games" width="80" />
-          <h3>Webworks</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-            perferendis totam enim. Nesciunt porro dolores expedita dolor
-            necessitatibus deserunt nemo.
-          </p>
-        </div>
-
-        <div class="job job-4">
-          <img src="img/atom.png" alt="atom" width="80" />
+          <img src="img/game.png" alt="games" />
           <h3>Webworks</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
