--- a/index.html
+++ b/index.html
@@ -91,35 +91,37 @@
 
         <div class="bio">
           <p>
-            Hi!, nice to meet you. I'm a Front-End Developer
+            Hi!, nice to meet you. I have passion for web development, I accept
+            with pleasure the challenges and goals I have leadership and
+            consider myself a pro-active person with desire to grow personally
+            and professionally
           </p>
         </div>
 
         <div class="job job-1">
-          <img src="img/skills.png" alt="skills" width="80" />
+          <img src="img/skills.png" alt="skills" />
           <h3>Skills</h3>
           <p>
-            HTML5, CSS3, Javascript, React, Git, English: B1
+            HTML, CSS, Javascript, React, Git, Bootstrap and Good level of
+            English.
           </p>
         </div>
 
         <div class="job job-2">
-          <img src="img/train.png" alt="train" width="80" />
-          <h3>Designers ABC</h3>
+          <img src="img/train.png" alt="train" />
+          <h3>Training</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-            perferendis totam enim. Nesciunt porro dolores expedita dolor
-            necessitatibus deserunt nemo.
+            I have worked as a freelance and with many personal projects, I know
+            some programming languages but I focused in Web Development.
           </p>
         </div>
 
         <div class="job job-3">
-          <img src="img/game.png" alt="games" />
-          <h3>Webworks</h3>
+          <img src="img/coffee.png" alt="coffee" />
+          <h3>Personal</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-            perferendis totam enim. Nesciunt porro dolores expedita dolor
-            necessitatibus deserunt nemo.
+            I love my family and my girlfriend also I like football and spend
+            time whit my friends.
           </p>
         </div>
       </div>
